<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_attendance_fragment"

            android:title="@string/attendance" />

        <item
            android:id="@+id/nav_attendance_policy_fragment"

            android:title="@string/attendance_policy" />

        <item
            android:id="@+id/nav_aboutus_fragment"
            android:icon="@drawable/ic_information"
            android:title="@string/about_us" />

        <item
            android:id="@+id/nav_change_password_fragment"
            android:icon="@drawable/ic_lock_reset"
            android:title="@string/change_password" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_variant"
            android:title="@string/logout" />

    </group>
</menu>