<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_999">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_10sdp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/currentPassEditTextCV"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/currentPassEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/current_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="@dimen/_15sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newPassEditTextCV"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="@+id/currentPassEditTextCV"
                app:layout_constraintStart_toStartOf="@+id/currentPassEditTextCV"
                app:layout_constraintTop_toBottomOf="@+id/currentPassEditTextCV">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newPassEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/new_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="@dimen/_15sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newConfPassEditTextCV"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="@+id/newPassEditTextCV"
                app:layout_constraintStart_toStartOf="@+id/newPassEditTextCV"
                app:layout_constraintTop_toBottomOf="@+id/newPassEditTextCV">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newConfPassEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/confirm_new_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="@dimen/_15sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/buttonChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@drawable/rounded_corner_button_bg"
                android:minWidth="@dimen/_110sdp"
                android:padding="@dimen/_12sdp"
                android:text="@string/change_password"
                app:layout_constraintEnd_toEndOf="@+id/newConfPassEditTextCV"
                app:layout_constraintStart_toStartOf="@+id/newConfPassEditTextCV"
                app:layout_constraintTop_toBottomOf="@+id/newConfPassEditTextCV" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pbChangePassword"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>